--- a/QuickLook.Plugin.Metadata.Base.config
+++ b/QuickLook.Plugin.Metadata.Base.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Metadata>
-  <Namespace>QuickLook.Plugin.HelloWorld</Namespace>
+  <Namespace>QuickLook.Plugin.Slideshow</Namespace>
   <Version>0</Version>
-  <Description>This plugin does nothing at all.</Description>
+  <Description>This plugin goes through a directory and reads all files.</Description>
 </Metadata>
